# Klpha

./: README.md
KlphaOriginal/: .gitignore  README.md  pyproject.toml
KlphaOriginal/configs/: backtest.yaml  costs.yaml  universe.yaml
KlphaOriginal/data/metadata/: download_log.json  sp500_symbols.json  symbols.json
KlphaOriginal/data/processed/benchmark/: sp500_returns.csv  sp500_returns.pkl
KlphaOriginal/data/raw/daily/: A.csv  AAPL.csv  ABBV.csv  ABNB.csv  ABT.csv  ACGL.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AFL.csv  AIG.csv  AIZ.csv  AJG.csv  AKAM.csv  ALB.csv  ALGN.csv  ALL.csv  ALLE.csv  AMAT.csv  AMCR.csv  AMD.csv  AME.csv  AMGN.csv  AMP.csv  AMT.csv  AMZN.csv  ANET.csv  AON.csv  AOS.csv  APA.csv  APD.csv  APH.csv  APO.csv  APP.csv  (+461 more)
KlphaOriginal/research/backtest/: __init__.py  factor_test.py  portfolio_bt.py  signals.py
KlphaOriginal/research/factors/: __init__.py  adx.py  alpha1.py  base.py  momentum.py  x_adx.py
KlphaOriginal/research/notebooks/: test_adx_factor.ipynb  test_alpha1_factor.ipynb  test_simple_factor.ipynb  test_xadx_factor.ipynb
KlphaOriginal/scripts/: run_factor_bt.py  update_data.py
